Fix fleet manager layout issue when Musashi K2 with ex-slot gets in

--- a/src/pages/strategy/themes/legacy.css
+++ b/src/pages/strategy/themes/legacy.css
@@ -1192,12 +1192,17 @@ body {
 	width:672px;
 	margin:0px 4px;
 }
+.tab_fleet .fleet_ships.max_slot6 {
+	height:114px;
+}
 .tab_fleet .fleet_ship {
-	height:auto;
-	min-height:85px;
+	height:87px;
 	background:#ffe;
 	border-radius:8px;
 	margin:10px 2px 2px 0px;
+}
+.tab_fleet .max_slot6 .fleet_ship {
+	height:103px;
 }
 .tab_fleet .fleet_ship .ship_hover {
 	height:53px;
